--- a/Aussagetest.tex
+++ b/Aussagetest.tex
@@ -36,18 +36,11 @@
   20-Privat
 }%
 
-% Abkürzungen für diverse Ausrichtungen
-% Aktiviere z.B. \TALSGLF, um nur die relevanten Themen für die GLF-Prüfung zu berücksichtigen.
-%\TALSGLF
-%\TALSSPF
-
-\SetFilterTo
-{%
-  AUTOR=Bruno Bischofberger,
-  AUSRICHTUNG=TALS,  % hier darf nur eine Ausrichtung angegeben werden
-}%
-
-%\DrawTikZcheckboxes
+%\SetFilterTo
+%{%
+%  AUTOR=Bruno Bischofberger,
+%  AUSRICHTUNG=TALS,  % hier darf nur eine Ausrichtung angegeben werden
+%}%
 
 % ==================================================================
 \begin{document}
