\TALSGLF, \TALSSPF shortcuts moved to ...bmzcls.cls (where they belong)

--- a/Aussagetest.tex
+++ b/Aussagetest.tex
@@ -2,7 +2,7 @@
 % FILE     Aussagetest.tex
 % INFO     -
 %
-% DATE     22.07.2022
+% DATE     08.08.2022
 % OWNER    Bischofberger
 % ==================================================================
 
@@ -35,6 +35,10 @@
   19-Vektorgeometrie,
   20-Privat
 }%
+
+% Benutze eine der unteren beiden Optionen, um rasch alle GLF-/SPF-Themen einzuschliessen.
+%\TALSGLF
+%\TALSSPF
 
 %\SetFilterTo
 %{%
