--- a/randgentftest.sty
+++ b/randgentftest.sty
@@ -2,7 +2,7 @@
 % FILE     randgentftest.sty
 % INFO     
 %
-% DATE     22.07.2022
+% DATE     08.08.2022
 % OWNER    Bischofberger
 % ==================================================================
 % This work may be distributed and/or modified under the
@@ -56,74 +56,41 @@
 }
 
 
-% define parent folder here
+% define parent folder
 \tl_new:N \l__randgentftest_collectionfolder_tl
 \NewDocumentCommand \SetCollectionFolderTo { m } { 
   \tl_set:Nn \l__randgentftest_collectionfolder_tl { #1 }
 }
 
 
-% define subfolders here
+% define subfolders
 \tl_new:N \l__randgentftest_topicfolders_tl
 \NewDocumentCommand \SetTopicFoldersTo { m } { 
   \tl_set:Nn \l__randgentftest_topicfolders_tl { #1 }
 }
 
 
-%% shortcut for TALS GLF content
-%\newcommand*{\TALSGLF}
-%{%
-%  \renewcommand*{\Topicfolders}
-%  {%
-%    01-Algebra,
-%    03-Lineare-Gleichungen,
-%    04-Lineare-Gleichungssysteme,
-%    05-Quadratische-Gleichungen,
-%    07-Lineare-Funktionen,
-%    08-Quadratische-Funktionen,
-%    12-Datenanalyse,
-%    14-Planimetrie-I,
-%    15-Planimetrie-II,
-%    16-Trigonometrie-I,
-%    17-Trigonometrie-II,
-%  }%
-%}
-%
-%% shortcut for TALS SPF content
-%\newcommand*{\TALSSPF}
-%{%
-%  \renewcommand*{\Topicfolders}
-%  {%
-%    02-Potenzrechnen,
-%    06-Nichtlineare-Gleichungen,
-%    09-Potenzfunktionen,
-%    10-Polynomfunktionen,
-%    11-Exponentialfunktionen,
-%    18-Stereometrie,
-%    19-Vektorgeometrie,
-%  }%
-%}
-
-
+% define true/false folders
 \tl_new:N  \l__randgentftest_tFolder_tl
-\tl_set:Nn \l__randgentftest_tFolder_tl { 01-wahr }  % set as default here
+\tl_new:N  \l__randgentftest_fFolder_tl
+\tl_set:Nn \l__randgentftest_tFolder_tl { 01-wahr }    % set as default here
+\tl_set:Nn \l__randgentftest_fFolder_tl { 02-falsch }  % set as default here
 \NewDocumentCommand \SetTrueFolderTo { m } {
   \tl_set:Nn \l__randgentftest_tFolder_tl { #1 }
 }
-
-\tl_new:N  \l__randgentftest_fFolder_tl
-\tl_set:Nn \l__randgentftest_fFolder_tl { 02-falsch }  % set as default here
 \NewDocumentCommand \SetFalseFolderTo { m } {
   \tl_set:Nn \l__randgentftest_fFolder_tl { #1 }
 }
 
 
+% define filters
 \tl_new:N  \l__randgentftest_filter_tl
 \NewDocumentCommand \SetFilterTo { m } {
   \tl_set:Nn \l__randgentftest_filter_tl { #1 }
 }
 
 
+% define keys for main macros here
 \keys_define:nn{randgentftest/print}
 {%
   solutions .bool_set:N = \l__print_solutions_bool,
