--- a/randgentftest.sty
+++ b/randgentftest.sty
@@ -2,7 +2,7 @@
 % FILE     randgentftest.sty
 % INFO     
 %
-% DATE     08.08.2022
+% DATE     23.09.2022
 % OWNER    Bischofberger
 % ==================================================================
 % This work may be distributed and/or modified under the
@@ -13,7 +13,7 @@
 % and version 1.3 or later is part of all distributions of LaTeX
 % version 2005/12/01 or later.
 
-\ProvidesExplPackage {randgentftest} {2022-07-19} {0.1}
+\ProvidesExplPackage {randgentftest} {2022-09-23} {0.1}
   {Create randomly generated true/false tests.}
 
 
@@ -49,8 +49,9 @@
 \newlist { checklist } { itemize } { 2 }
 \setlist [ checklist,1,2 ] {
   label = \tl_use:N \l__randgentftest_checkbox_tl,
-  left = 0pt .. 1.6em,
-  nosep,
+  labelindent=0pt,
+  leftmargin=1.6em,
+  labelsep=*,
   align = left,
   itemsep = 4ex
 }
