--- a/testfiles/regressionTest002.tex
+++ b/testfiles/regressionTest002.tex
@@ -14,7 +14,7 @@
 \begin{document}
 
 \section*{Gesamte Aussagesammlung}
-\PrintEntireLibrary[filepaths=false]
+\PrintEntireLibrary[filepaths=true]
 
 \end{document}
 % ==================================================================
