--- a/testfiles/regressionTest.sty
+++ b/testfiles/regressionTest.sty
@@ -15,32 +15,32 @@
 
 \ProvidesPackage{regressionTest}
 
-\RequirePackage[a4paper,textwidth=160mm,top=30mm,bottom=40mm]{geometry}
+%\RequirePackage[a4paper,textwidth=160mm,top=30mm,bottom=40mm]{geometry}
 \RequirePackage[ngerman]{babel}
 \RequirePackage[babel=true]{microtype}
-
+%
 \RequirePackage{amsfonts}
-\RequirePackage{mathtools}
-
-\setlength{\parindent}{0pt}
-\allowdisplaybreaks
-\raggedbottom
-
-\RequirePackage{fancyhdr}
-\pagestyle{fancy}
-\lhead{B\kern0.10em M\kern0.07em S Zürich}
-\rhead{\thepage}
-\cfoot{}
-\chead[]{Wahr-Falsch-Test}
+%\RequirePackage{mathtools}
+%
+%\setlength{\parindent}{0pt}
+%\allowdisplaybreaks
+%\raggedbottom
+%
+%\RequirePackage{fancyhdr}
+%\pagestyle{fancy}
+%\lhead{B\kern0.10em M\kern0.07em S Zürich}
+%\rhead{\thepage}
+%\cfoot{}
+%\chead[]{Wahr-Falsch-Test}
 
 
 % =================================================
 % Verschiedene Zusatzpakete für BMZ-Sammlung
 
-\RequirePackage{siunitx}
-\sisetup{per-mode=symbol,exponent-product=\cdot}
+%\RequirePackage{siunitx}
+%\sisetup{per-mode=symbol,exponent-product=\cdot}
 
-\RequirePackage[makeroom]{cancel}
+%\RequirePackage[makeroom]{cancel}
 
 %\RequirePackage{tikz}
 %\usetikzlibrary{calc,angles,intersections,arrows.meta}
@@ -61,37 +61,37 @@
 \SetTrueFolderTo{01-wahr/}
 \SetFalseFolderTo{02-falsch/}
 
-% Shortcut für TALS GLF Gesamtinhalte
-\newcommand{\TALSGLF}
-{%
-  \SetTopicFoldersTo{%
-    01-Algebra,
-    03-Lineare-Gleichungen,
-    04-Lineare-Gleichungssysteme,
-    05-Quadratische-Gleichungen,
-    07-Lineare-Funktionen,
-    08-Quadratische-Funktionen,
-    12-Datenanalyse,
-    14-Planimetrie-I,
-    15-Planimetrie-II,
-    16-Trigonometrie-I,
-    17-Trigonometrie-II,
-  }%
-}
-
-% Shortcut für TALS SPF Gesamtinhalte
-\newcommand{\TALSSPF}
-{%
-  \SetTopicFoldersTo{%
-    02-Potenzrechnen,
-    06-Nichtlineare-Gleichungen,
-    09-Potenzfunktionen,
-    10-Polynomfunktionen,
-    11-Exponentialfunktionen,
-    18-Stereometrie,
-    19-Vektorgeometrie,
-  }%
-}
+%% Shortcut für TALS GLF Gesamtinhalte
+%\newcommand{\TALSGLF}
+%{%
+%  \SetTopicFoldersTo{%
+%    01-Algebra,
+%    03-Lineare-Gleichungen,
+%    04-Lineare-Gleichungssysteme,
+%    05-Quadratische-Gleichungen,
+%    07-Lineare-Funktionen,
+%    08-Quadratische-Funktionen,
+%    12-Datenanalyse,
+%    14-Planimetrie-I,
+%    15-Planimetrie-II,
+%    16-Trigonometrie-I,
+%    17-Trigonometrie-II,
+%  }%
+%}
+%
+%% Shortcut für TALS SPF Gesamtinhalte
+%\newcommand{\TALSSPF}
+%{%
+%  \SetTopicFoldersTo{%
+%    02-Potenzrechnen,
+%    06-Nichtlineare-Gleichungen,
+%    09-Potenzfunktionen,
+%    10-Polynomfunktionen,
+%    11-Exponentialfunktionen,
+%    18-Stereometrie,
+%    19-Vektorgeometrie,
+%  }%
+%}
 
 % =================================================
 
