test for non-existing collection folder

--- a/testfiles/regressionTest001.tex
+++ b/testfiles/regressionTest001.tex
@@ -2,7 +2,7 @@
 % FILE     regressionTest001.tex
 % INFO     -
 %
-% DATE     29.09.2022
+% DATE     18.10.2022
 % OWNER    Bischofberger
 % ==================================================================
 
@@ -14,7 +14,7 @@
 \begin{document}
 
 \section*{Gesamte Aussagesammlung}
-\PrintEntireLibrary[filepaths=false]
+\PrintEntireLibrary[filepaths=true]
 
 \end{document}
 % ==================================================================
