collection folder name must be given, so it should be a mandatory argument for the main command

--- a/Aussagetest.tex
+++ b/Aussagetest.tex
@@ -46,10 +46,10 @@
 \begin{document}
 
 \section*{Wahr-Falsch-Test}
-\CreateStatementTest[solutions=true, filepaths=false]{3}{5}
+\CreateStatementTest[solutions=true, filepaths=false]{Aussagesammlung}{3}{5}
 
 %\section*{Gesamte Aussagesammlung}
-%\PrintEntireLibrary[filepaths=false]
+%\PrintEntireLibrary[filepaths=false]{Aussagesammlung}
 
 \end{document}
 % ==================================================================
