--- a/testfiles/regressionTest004.tex
+++ b/testfiles/regressionTest004.tex
@@ -1,6 +1,6 @@
 % ==================================================================
 % FILE     regressionTest001.tex
-% INFO     print while collection
+% INFO     test for non-existing true-/false-folders
 %
 % DATE     18.10.2022
 % OWNER    Bischofberger
@@ -14,11 +14,16 @@
 
 \RequirePackage{randgentftest}
 
+\SetTopicFoldersTo{01-Algebra}
+
+
+%\SetTrueFolderTo{01-wahr/}
+%\SetFalseFolderTo{02-falsch/}
+
 % ==================================================================
 \begin{document}
 
-\section*{Gesamte Aussagesammlung}
-\PrintEntireLibrary[filepaths=true]{RegressionTestCollection}
+\CreateStatementTest[solutions=true, filepaths=false]{RegressionTestCollection}{1}{1}
 
 \end{document}
 % ==================================================================
