if topicfolderlist is not given, let's assume "parentfolder/01-true/" "parentfolder/02-false/"

--- a/testfiles/regressionTest001.tex
+++ b/testfiles/regressionTest001.tex
@@ -1,6 +1,6 @@
 % ==================================================================
 % FILE     regressionTest001.tex
-% INFO     print while collection
+% INFO     print collection
 %
 % DATE     18.10.2022
 % OWNER    Bischofberger
