--- a/testfiles/regressionTest003.tex
+++ b/testfiles/regressionTest003.tex
@@ -1,6 +1,11 @@
 % ==================================================================
 % FILE     regressionTest003.tex
-% INFO     topicfolder not set --> take all subfolders!
+% INFO     topicfolder not set
+%          -> parentfolder/
+%             |
+%             |_ 01-wahr/
+%             |
+%             |_ 02-falsch/
 %
 % DATE     18.10.2022
 % OWNER    Bischofberger
