--- a/testfiles/regressionTest001.tex
+++ b/testfiles/regressionTest001.tex
@@ -14,6 +14,9 @@
 
 \RequirePackage{randgentftest}
 
+\SetTrueFolderTo{01-wahr/}
+\SetFalseFolderTo{02-falsch/}
+
 % ==================================================================
 \begin{document}
 
