weitere (eigene) Aussagen hinzugefügt

--- a/Aussagesammlung/14-Planimetrie-I/01-wahr/Planimetrie-I-0002w.tex
+++ b/Aussagesammlung/14-Planimetrie-I/01-wahr/Planimetrie-I-0002w.tex
@@ -1,7 +1,7 @@
 % AUTOR:        Bruno Bischofberger
 % ERSTELLT AM:  20.10.2022
 % GEÄNDERT AM:  20.10.2022
-% AUSRICHTUNG:  TALS, GESO, DL, ARTE
+% AUSRICHTUNG:  TALS
 % INHALTE:      Pythagoras
 
 \begin{minipage}[c]{0.3\linewidth}
