--- a/Aussagesammlung/14-Planimetrie-I/02-falsch/Planimetrie-I-0002f.tex
+++ b/Aussagesammlung/14-Planimetrie-I/02-falsch/Planimetrie-I-0002f.tex
@@ -1,7 +1,7 @@
 % AUTOR:        Bruno Bischofberger
 % ERSTELLT AM:  20.10.2022
 % GEÄNDERT AM:  20.10.2022
-% AUSRICHTUNG:  TALS, GESO, DL, ARTE
+% AUSRICHTUNG:  TALS
 % INHALTE:      Pythagoras
 
 \begin{minipage}[c]{0.3\linewidth}
