--- a/Aussagetest.tex
+++ b/Aussagetest.tex
@@ -46,6 +46,8 @@
 \begin{document}
 
 \section*{Wahr-Falsch-Test}
+\textit{Kreuzen Sie alle wahren Aussagen an.}
+\vskip\baselineskip
 \CreateStatementTest[solutions=true, filepaths=false]{Aussagesammlung}{3}{5}
 
 %\section*{Gesamte Aussagesammlung}
