--- a/testfiles/regressionTest003.tex
+++ b/testfiles/regressionTest003.tex
@@ -7,14 +7,13 @@
 %             |
 %             |_ 02-falsch/
 %
-% DATE     18.10.2022
+% DATE     25.10.2022
 % OWNER    Bischofberger
 % ==================================================================
 
-\documentclass[10pt]{article}
+\documentclass[10pt,ngerman]{article}
 
-\RequirePackage[ngerman]{babel}
-\RequirePackage[babel=true]{microtype}
+\RequirePackage{babel}
 \RequirePackage{amsfonts}
 
 \RequirePackage{randgentftest}
