--- a/testfiles/regressionTest001.tex
+++ b/testfiles/regressionTest001.tex
@@ -2,14 +2,13 @@
 % FILE     regressionTest001.tex
 % INFO     print collection
 %
-% DATE     18.10.2022
+% DATE     25.10.2022
 % OWNER    Bischofberger
 % ==================================================================
 
-\documentclass[10pt]{article}
+\documentclass[10pt,ngerman]{article}
 
-\RequirePackage[ngerman]{babel}
-\RequirePackage[babel=true]{microtype}
+\RequirePackage{babel}
 \RequirePackage{amsfonts}
 
 \RequirePackage{randgentftest}
