fix single foldername mistake

--- a/Aussagetest.tex
+++ b/Aussagetest.tex
@@ -2,7 +2,7 @@
 % FILE     Aussagetest.tex
 % INFO     -
 %
-% DATE     08.08.2022
+% DATE     25.10.2022
 % OWNER    Bischofberger
 % ==================================================================
 
@@ -27,7 +27,7 @@
   %15-Planimetrie-II,
   %16-Trigonometrie-I,
   %17-Trigonometrie-II,
-  %18 Stereometrie,
+  %18-Stereometrie,
   19-Vektorgeometrie,
   20-Privat
 }%
