--- a/testfiles/regressionTest003.tex
+++ b/testfiles/regressionTest003.tex
@@ -13,10 +13,10 @@
 
 \documentclass[10pt,ngerman]{article}
 
-\RequirePackage{babel}
-\RequirePackage{amsfonts}
+\usepackage{babel}
+\usepackage{amsfonts}
 
-\RequirePackage{randgentftest}
+\usepackage{randgentftest}
 
 \SetTrueFolderTo{01-wahr/}
 \SetFalseFolderTo{02-falsch/}
