--- a/testfiles/regressionTest004.tex
+++ b/testfiles/regressionTest004.tex
@@ -8,10 +8,10 @@
 
 \documentclass[10pt,ngerman]{article}
 
-\RequirePackage{babel}
-\RequirePackage{amsfonts}
+\usepackage{babel}
+\usepackage{amsfonts}
 
-\RequirePackage{randgentftest}
+\usepackage{randgentftest}
 
 \SetTopicFoldersTo{01-Algebra}
 
