--- a/testfiles/regressionTest002.tex
+++ b/testfiles/regressionTest002.tex
@@ -8,7 +8,7 @@
 
 \documentclass[10pt]{article}
 
-\RequirePackage{randgentftest}
+\usepackage{randgentftest}
 
 % ==================================================================
 \begin{document}
