print solutions page in gray and translate its title "Solutions" to german if document language is set to german/ngerman

--- a/Aussagetest.tex
+++ b/Aussagetest.tex
@@ -6,7 +6,7 @@
 % OWNER    Bischofberger
 % ==================================================================
 
-\documentclass{randgentftestbmzcls}
+\documentclass[10pt,ngerman]{randgentftestbmzcls}
 
 % Alle unkommentierten (aktiven) Ordner werden berücksichtigt.
 \SetTopicFoldersTo{%
