--- a/randgentftest.sty
+++ b/randgentftest.sty
@@ -2,7 +2,7 @@
 % FILE     randgentftest.sty
 % INFO     
 %
-% DATE     18.10.2022
+% DATE     25.10.2022
 % OWNER    Bischofberger
 % ==================================================================
 % This work may be distributed and/or modified under the
@@ -13,8 +13,19 @@
 % and version 1.3 or later is part of all distributions of LaTeX
 % version 2005/12/01 or later.
 
-\ProvidesExplPackage {randgentftest} {2022-10-18} {0.1}
+\ProvidesExplPackage {randgentftest} {2022-10-25} {0.1}
   {Create randomly generated true/false tests.}
+
+
+% solutions will be printed in gray
+\RequirePackage{xcolor}
+
+
+% solution page starts with title "solutions" -
+% so let's provide some translations here
+\RequirePackage { translator }
+\newtranslation [ to = English ] {Solutions} {Solutions}
+\newtranslation [ to = German  ] {Solutions} {Lösungen}
 
 
 % define checklist environment
@@ -152,5 +163,4 @@
     }%
   }%
 }%
-
 
