--- a/randgentftest.sty
+++ b/randgentftest.sty
@@ -2,7 +2,7 @@
 % FILE     randgentftest.sty
 % INFO     
 %
-% DATE     30.03.2023
+% DATE     11.07.2023
 % OWNER    Bischofberger
 % ==================================================================
 % This work may be distributed and/or modified under the
@@ -158,7 +158,7 @@
       printAll('#2', ' ', '\l__randgentftest_tFolder_tl', '\l__randgentftest_fFolder_tl', ' ', true)
     }%
     {%
-      printAll('#2', ' ', '\l__randgentftest_tFolder_tl', '\l__randgentftest_fFolder_tl', ' ', ' ', false)
+      printAll('#2', ' ', '\l__randgentftest_tFolder_tl', '\l__randgentftest_fFolder_tl', ' ', false)
     }%
   }%
 }%
